--- a/Dockerfile.online
+++ b/Dockerfile.online
@@ -13,7 +13,7 @@ RUN \
    fi
 
 # Install environment
-COPY ubuntu-init.sh .ubuntu-init
+ADD https://raw.githubusercontent.com/Pterosaur/linux-config/master/ubuntu-init.sh .ubuntu-init
 
 RUN \
    bash .ubuntu-init; \
