--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -34,3 +34,6 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 run '~/.tmux/plugins/tpm/tpm'
 
 set -g default-terminal "screen-256color"
+
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
